<resources>
    <string name="app_name">GST Bill</string>

    <!-- Clients String-->
    <string name="hint_name">Name</string>
    <string-array name="array_gst_treatment">
        <item>Select GST Treatment</item>
        <item>Registered Business</item>
        <item>Unregistered Business</item>
        <item>Consumer</item>
    </string-array>
    <string name="lbl_read_contacts">Reading Contacts&#8230;</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone1">Phone 1</string>
    <string name="hint_phone2">Phone 2</string>
    <string name="hint_business_name">Name of Business</string>
    <string name="hint_gstin">GSTIN / UIN</string>
    <string name="hint_place_of_supply">Place Of Supply</string>
    <string-array name="array_payment_terms">
        <item>Select Payment Terms</item>
        <item>Due On Receipt</item>
        <item>Due end of month</item>
        <item>Due end of next month</item>
        <item>Custom Days</item>
    </string-array>
    <string name="hint_cus_days_payment">Custom Days For Payment</string>
    <string name="hint_due_days">Due Days</string>
    <string name="lbl_billing_address">Billing Address</string>
    <string name="lbl_shipping_address">Shipping Address</string>
    <string name="hint_address_line1">Address Line 1</string>
    <string name="hint_address_line2">Address Line 2</string>
    <string name="hint_city">City</string>
    <string name="lbl_state">State</string>
    <string name="hint_pincode">Pin Code</string>
    <string name="title_add_billing_address">Add Billing Address</string>
    <string name="title_add_shipping_address">Add shipping Address</string>
    <string name="title_edit_billing_address">Update Billing Address</string>
    <string name="title_edit_shipping_address">Update shipping Address</string>
    <string name="lbl_same_address">Shipping Address is same as Billing Address?</string>

    <!--Product Strings-->
    <string name="lbl_add_product">Add Product</string>
    <string name="lbl_product_type">Product Type</string>
    <string name="lbl_goods">Goods</string>
    <string name="lbl_service">Service</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_hsn_code">HSN / SAC Code</string>
    <string name="hint_qunatity">Quantity</string>
    <string-array name="units_array">
        <item>Units</item>
        <item>Centimeter</item>
        <item>Dozen</item>
        <item>Gram</item>
        <item>Kilogram</item>
        <item>Kilometers</item>
        <item>Liter</item>
        <item>Meter</item>
        <item>Metric Ton</item>
        <item>Milliliter</item>
        <item>Millimeters</item>
        <item>Numbers</item>
        <item>Packs</item>
        <item>Pieces</item>
        <item>Quintal</item>
        <item>Square Feet</item>
        <item>Square Meter</item>
        <item>Tonnes</item>
    </string-array>
    <string name="hint_price">Unit Price</string>
    <string name="lbl_discount">Discount</string>
    <string name="lbl_value">Value</string>
    <string name="lbl_rupee">$</string>
    <string name="lbl_percentage">%</string>
    <string-array name="tax_array">
        <item>Tax Rate</item>
        <item>0%</item>
        <item>3%</item>
        <item>5%</item>
        <item>12%</item>
        <item>18%</item>
        <item>28%</item>
    </string-array>
    <string name="hint_prod_desc">Product Description</string>

    <!--Sales Invoice Strings-->
    <string-array name="array_sales_invoice_title">
        <item>Customer</item>
        <item>Items</item>
        <item>Payment</item>
        <item>Invoice Preview</item>
    </string-array>

    <!--Menu Strings-->
    <string name="menu_add_client">Add Client</string>
    <string name="menu_delete_client">Delete Client</string>
    <string name="menu_search">Search</string>
    <string name="menu_save">Save</string>

    <!--Error strings-->
    <string name="error_view_oops">Oops</string>
    <string name="error_view_retry">RETRY</string>
    <string name="error_network_response">Something went wrong. Please try after Sometime.</string>

    <!--Empty Msg Strings-->
    <string name="msg_no_client">No Clients added yet..!!! Click below button to add clients.</string>
    <string name="msg_no_product">No Products added yet..!!! Click below button to add Products.</string>
    <string name="msg_no_results_found">No results found !!!</string>
</resources>
